bat.string1.lessons.bat.string1.Last2.scala.error
last2:8: error: Int does not take parameters
		if(chaine(0) == str(i) && chaine(1) == str(i+1))
                         ^